模拟跑道，奔跑
模拟跑道，奔跑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".ProgressBarActivity"
             android:label="@string/title_activity_progress_bar" >
         </activity>
+        <activity
+            android:name=".CustomTrackActivity"
+            android:label="@string/title_activity_custom_track" >
+        </activity>
     </application>
 
 </manifest>
